--- a/templates/cards.html
+++ b/templates/cards.html
@@ -15,7 +15,7 @@
 		</a>
 	</header>
 	<ul class="cards">
-		{{#each card_images}}
+		{{#each cards}}
 		<li class="card">
 			<div class="recipient">To: {{name}}
 			</div>
